# Syncio

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  Dockerfile  LICENSE  Makefile  README.md  build.bat  build.c  build.sh  cbuild.h  main.c  main.cpp  project.json  syncio  syncio.h  test.cpp
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: config.yml  feature_request.yml
.github/workflows/: build.yml  greetings.yml  update-changelog.yml
Syncio/: stringc.c  stringc.cpp  stringc.h  syncio.cpp  syncio.h  synclib.h  types.h  uicore.h  utills.h
docs/: BUILD.md
examples/: print.c
include/: stringc.h  syncio.h  synclib.h  types.h
include/libs/: stringc.h
src/: main.c  main.cpp  stringc.c  syncio.c  syncio.cpp  synclib.c  synclib.cpp
test/: array.cpp  math.cpp
